# WiFiChipOTAProgramming

./: .gitignore  CMakeLists.txt  README.md  VERSION  prj.conf  sysbuild.conf
.cache/clangd/index/: main.c.DBFEABE71795C2CF.idx  n6_communication.c.7C4198553DE15FDD.idx  n6_communication.h.26137609F14432EC.idx  udp_socket.c.88DA25A4A92CD596.idx  udp_socket.h.24A966590F1757D4.idx  wifi_pswd.h.8C0801CE8AA6A87C.idx  wifi_utilities.c.EB1245F6C031A4B4.idx  wifi_utilities.h.1298871E22A047F3.idx
PC_Site/: CMakeLists.txt  tcp_socket_server.c
boards/: ubx_evk_iris_w1 copy.overlay  ubx_evk_iris_w1.conf  ubx_evk_iris_w1.overlay
modules/tcp_socket/: CMakeLists.txt  Kconfig  tcp_socket.c  tcp_socket.h
modules/tcp_socket/zephyr/: module.yaml
modules/wifi_utilities/: CMakeLists.txt  Kconfig  README.md  wifi_utilities.c  wifi_utilities.h
modules/wifi_utilities/zephyr/: module.yaml
src/: main.c
sysbuild/: mcuboot copy.overlay  mcuboot.conf  mcuboot.overlay
